--- a/zh-CN/documentation/go01.md
+++ b/zh-CN/documentation/go01.md
@@ -4,79 +4,79 @@
 
 - Air quality model（空气质量模型）
 
-预测环境空气质量的模型，该模型考虑了气象学、人为排放源和生物排放源的影响。它模拟对流、弥散、云、干湿降水、空气化学、颗粒物形成等物理过程，以提供各种污染物（例如臭氧）和其他化学物质的环境空气质量估算。
+	预测环境空气质量的模型，该模型考虑了气象学、人为排放源和生物排放源的影响。它模拟对流、弥散、云、干湿降水、空气化学、颗粒物形成等物理过程，以提供各种污染物（例如臭氧）和其他化学物质的环境空气质量估算。
 
 - Anthropogenic sources（人为源）
 
-人为排放源，除生物源之外的所有清单源类别均被视为人为源。
+	人为排放源，除生物源之外的所有清单源类别均被视为人为源。
 
 <a id=glossary_area_source></a>
 
 - Area source（区域源）
 
-属于人为源类别，表示为二维排放源，通常按县来划分。在SMOKE中，“区域源”一般是指不是点源也不是道路移动源的其他源类型的集合。SMOKE区域源由国家、州和县代码以及源类别代码（source category codes，SCC）定义。区域源也称为固定区域源，在SMOKE中包括非道路移动源。
+	属于人为源类别，表示为二维排放源，通常按县来划分。在SMOKE中，“区域源”一般是指不是点源也不是道路移动源的其他源类型的集合。SMOKE区域源由国家、州和县代码以及源类别代码（source category codes，SCC）定义。区域源也称为固定区域源，在SMOKE中包括非道路移动源。
 
 ### B
 
 - Base year（基准年）
 
-用于空气质量建模进行评估的年份。空气质量建模过程通常包括对基准年进行建模，并将模型运行结果与监测数据进行比较。一般情况下，要对基准年的气象和排放数据进行改进以使模型具有足够的可信度后，然后在有或没有控制措施的情况下，到未来某一年排放量变化后，进行模型的预测。
+	用于空气质量建模进行评估的年份。空气质量建模过程通常包括对基准年进行建模，并将模型运行结果与监测数据进行比较。一般情况下，要对基准年的气象和排放数据进行改进以使模型具有足够的可信度后，然后在有或没有控制措施的情况下，到未来某一年排放量变化后，进行模型的预测。
 
 <a id=glossary_biogenic_source></a>
 
 - Biogenic source（生物源）
 
-天然源或非人为源。在SMOKE中，生物源仅包括植被的VOC排放和土壤的一氧化二氮排放。火山或其他地热排放、水体排放和其他生物源不包括在SMOKE的生物源排放中。
+	天然源或非人为源。在SMOKE中，生物源仅包括植被的VOC排放和土壤的一氧化二氮排放。火山或其他地热排放、水体排放和其他生物源不包括在SMOKE的生物源排放中。
 
 ### C
 
 - Chemical mechanism（化学机理）
 
-一组用于表示空气化学的化学物种及其相互作用关系，例如carbon bond 6（CB6，碳键6），州立大气污染研究中心（SAPRC，Statewide Air Pollution Research Center）。
+	一组用于表示空气化学的化学物种及其相互作用关系，例如carbon bond 6（CB6，碳键6），州立大气污染研究中心（SAPRC，Statewide Air Pollution Research Center）。
 
 <a id=glossary_chemical_speciation></a>
 
 - Chemical speciation（化学物种组成）
 
-将清单中污染物数据转换为空气质量模型所需的化学物质（例如将VOC分为PAR、OLE、XYL、TOL、ISOP等）。
+	将清单中污染物数据转换为空气质量模型所需的化学物质（例如将VOC分为PAR、OLE、XYL、TOL、ISOP等）。
 
 - Cross-reference file（交叉引用文件）
 
-用于将排放清单中的源与基于源特征的配置文件数据进行匹配的数据集。通常，交叉引用文件中可以有数千条记录，而排放清单中可以有成千上万条记录。交叉引用文件有助于将排放处理的转换因子分配给排放清单中的记录。
+	用于将排放清单中的源与基于源特征的配置文件数据进行匹配的数据集。通常，交叉引用文件中可以有数千条记录，而排放清单中可以有成千上万条记录。交叉引用文件有助于将排放处理的转换因子分配给排放清单中的记录。
 
 ### E
 
 - Elevated source（高架源）
 
-由于烟羽抬升作用使得排放高于模型第一层的点源。
+	由于烟羽抬升作用使得排放高于模型第一层的点源。
 
 - Emission inventory（排放清单）
 
-排放清单是对排放到大气中的空气污染物数量的核算。它通常包括以下内容：
+	排放清单是对排放到大气中的空气污染物数量的核算。它通常包括以下内容：
 
-1. 所含污染物的化学或物理特性
+	1. 所含污染物的化学或物理特性
 
-2. 所覆盖的地理区域
+	2. 所覆盖的地理区域
 
-3. 所涵盖的机构实体
+	3. 所涵盖的机构实体
 
-4. 估计排放量的时间段
+	4. 估计排放量的时间段
 
-5. 导致排放的活动类型
+	5. 导致排放的活动类型
 
-排放清单是为各种目的而开发的。科学家将天然和人为排放物的清单用作空气质量模型的输入，决策者用于制定战略和政策或跟踪标准的进展，设施和监管机构用于建立允许排放率的履约记录。结构合理的清单应包括足够的文档和其他数据，以使读者理解基本的假设并为包括的每个估算重建计算。
+	排放清单是为各种目的而开发的。科学家将天然和人为排放物的清单用作空气质量模型的输入，决策者用于制定战略和政策或跟踪标准的进展，设施和监管机构用于建立允许排放率的履约记录。结构合理的清单应包括足够的文档和其他数据，以使读者理解基本的假设并为包括的每个估算重建计算。
 
 - Emissions processing（排放处理）
 
-将排放清单（例如区域源、生物源、移动源和点源）的分辨率转换为空气质量模型所需的分辨率（例如逐小时、网格单元、模拟物种数据）。它还可能包括从一年到另一年的不断增长的数据，以及对清单应用排放控制措施。此过程需要大量的补充数据文件，包括网格替代物、交叉引用文件以及用于化学形态和时间分配的因子参数。它包括合并所有源类别，并确保排放符合特定空气质量模型所需的格式。排放处理通常包括质量控制以提高用户对数据按预期进行转换的信心。
+	将排放清单（例如区域源、生物源、移动源和点源）的分辨率转换为空气质量模型所需的分辨率（例如逐小时、网格单元、模拟物种数据）。它还可能包括从一年到另一年的不断增长的数据，以及对清单应用排放控制措施。此过程需要大量的补充数据文件，包括网格替代物、交叉引用文件以及用于化学形态和时间分配的因子参数。它包括合并所有源类别，并确保排放符合特定空气质量模型所需的格式。排放处理通常包括质量控制以提高用户对数据按预期进行转换的信心。
 
 <a id=glossary_environment_variable></a>
 
 - Environment variable（环境变量）
 
-环境变量是SMOKE与操作系统环境进行通信的方式。环境变量有多种用途，包括分配文件名、设置选项和设置操作参数。
+	环境变量是SMOKE与操作系统环境进行通信的方式。环境变量有多种用途，包括分配文件名、设置选项和设置操作参数。
 
-UNIX系统C-shell中的环境变量是用**setenv**命令定义的。例如，要将`FILENAME`环境变量定义为`/home/user/`目录中的`testfile.txt`文件，则应使用以下命令：
+	UNIX系统C-shell中的环境变量是用**setenv**命令定义的。例如，要将`FILENAME`环境变量定义为`/home/user/`目录中的`testfile.txt`文件，则应使用以下命令：
 
 ```
 setenv FILENAME /home/user/testfile.txt
@@ -86,59 +86,59 @@ setenv FILENAME /home/user/testfile.txt
 
 - Fuel month（燃料月）
 
-燃料月的概念用于指示在MOVES模拟中何时应使用一组特定的燃料属性。燃料月通过使用一个月来代表一组月份来减少MOVES的计算时间。为了确定燃料月以及与该月份相似的月份，用户应在MOVES数据库中查看州提供的每个代表县的燃料供应数据。如果全年的燃料供应数据都发生了变化，则按燃油参数汇总月份。例如，如果给定代表县的一月份的克/英里废气排放速率与二月份相同，则使用单个燃料月来代表一月和二月。这样仅需通过MOVES对一个月进行建模即可。
+	燃料月的概念用于指示在MOVES模拟中何时应使用一组特定的燃料属性。燃料月通过使用一个月来代表一组月份来减少MOVES的计算时间。为了确定燃料月以及与该月份相似的月份，用户应在MOVES数据库中查看州提供的每个代表县的燃料供应数据。如果全年的燃料供应数据都发生了变化，则按燃油参数汇总月份。例如，如果给定代表县的一月份的克/英里废气排放速率与二月份相同，则使用单个燃料月来代表一月和二月。这样仅需通过MOVES对一个月进行建模即可。
 
 - Future year（未来某年）
 
-基准年之后的某一年。
+	基准年之后的某一年。
 
 ### G
 
 - Grid（网格）
 
-请参见[Model grid（模型网格）](#glossary_model_grid)。
+	请参见[Model grid（模型网格）](#glossary_model_grid)。
 
 - Grid projection（网格投影）
 
-请参见[Map projection（地图投影）](#glossary_map_projection)。
+	请参见[Map projection（地图投影）](#glossary_map_projection)。
 
 - Gridding（网格化）
 
-请参见[Spatial allocation（空间分配）](#glossary_spatial_allocation).
+	请参见[Spatial allocation（空间分配）](#glossary_spatial_allocation).
 
 <a id=glossary_gridding_surrogate></a>
 
 - Gridding surrogate（网格替代）
 
-从比排放更精细的分辨率数据开发的数据集，用于在空间上将排放分配给网格单元（例如人口、住房、农业区域）。
+	从比排放更精细的分辨率数据开发的数据集，用于在空间上将排放分配给网格单元（例如人口、住房、农业区域）。
 
 ### I
 
 - Inventory pollutant（清单污染物）
 
-由人为源和生物源排放到大气中的一种或多种化合物，被定义为用于记录保存或监管的目的（例如一氧化碳（CO）氮氧化物（NOx）、挥发性有机化合物（VOC）、10微米及以下的颗粒物（PM10）。
+	由人为源和生物源排放到大气中的一种或多种化合物，被定义为用于记录保存或监管的目的（例如一氧化碳（CO）氮氧化物（NOx）、挥发性有机化合物（VOC）、10微米及以下的颗粒物（PM10）。
 
 ### L
 
 - Lambert conformal（兰伯特投影）
 
-一种地图投影。
+	一种地图投影。
 
 - Latitude/longitude（lat/lon，经纬度）
 
-用于测量地球表面位置的球形参考系统。纬度和经度是从地球中心到地球表面位置的角度。纬度测量南北方向的夹角。经度测量东西方向的夹角。在SMOKE中，经纬度是指地图投影。
+	用于测量地球表面位置的球形参考系统。纬度和经度是从地球中心到地球表面位置的角度。纬度测量南北方向的夹角。经度测量东西方向的夹角。在SMOKE中，经纬度是指地图投影。
 
 - Layer（层）
 
-请参见[Model layers（模型层）](#glossary_model_layers).
+	请参见[Model layers（模型层）](#glossary_model_layers).
 
 - Logical file names（逻辑文件名）
 
-程序用来访问文件的环境变量称为逻辑文件名。在[环境变量](#glossary_environment_variable)中，`FILENAME`是物理文件`/home/user/testfile.txt`的逻辑文件名。I/O API基于逻辑文件名，而且由于SMOKE使用I/O API来访问其所有文件，因此SMOKE也使用逻辑文件名。逻辑文件名的好处是程序不需要物理文件始终具有相同的名称。而是可以在每次运行程序时使用用户想要的任何物理文件名定义逻辑文件名。在[第8章，SMOKE输入文件](ch08.md)、[第9章，SMOKE中间文件](ch09.md)和[第10章，SMOKE输出文件](ch10.md）中,逻辑文件名用于引用文件、它们与程序的关联以及它们的格式。
+	程序用来访问文件的环境变量称为逻辑文件名。在[环境变量](#glossary_environment_variable)中，`FILENAME`是物理文件`/home/user/testfile.txt`的逻辑文件名。I/O API基于逻辑文件名，而且由于SMOKE使用I/O API来访问其所有文件，因此SMOKE也使用逻辑文件名。逻辑文件名的好处是程序不需要物理文件始终具有相同的名称。而是可以在每次运行程序时使用用户想要的任何物理文件名定义逻辑文件名。在[第8章，SMOKE输入文件](ch08.md)、[第9章，SMOKE中间文件](ch09.md)和[第10章，SMOKE输出文件](ch10.md)中,逻辑文件名用于引用文件、它们与程序的关联以及它们的格式。
 
 - Low-level point source（低架点源）
 
-模型第一层中的点源。没有抬升的源。
+	模型第一层中的点源。没有抬升的源。
 
 ### M
 
@@ -146,145 +146,145 @@ setenv FILENAME /home/user/testfile.txt
 
 - Map projection（地图投影）
 
-一种数学模型，可将地球表面上的要素位置转换为二维表面上的位置。由于地球是三维的，因此必须使用某种方法来绘制二维地图。一些突起保留形状，其他则保留区域、距离或方向的准确性。地图投影将地球表面投影到一个平面上。但是，任何此类表示都会扭曲地球表面的某些参数，无论是距离、面积、形状还是方向。
+	一种数学模型，可将地球表面上的要素位置转换为二维表面上的位置。由于地球是三维的，因此必须使用某种方法来绘制二维地图。一些突起保留形状，其他则保留区域、距离或方向的准确性。地图投影将地球表面投影到一个平面上。但是，任何此类表示都会扭曲地球表面的某些参数，无论是距离、面积、形状还是方向。
 
 - Merging（合并）
 
-在SMOKE中，合并可以指两个步骤。第一，它可以指的是将单个源类别的SMOKE过程进行合并，例如合并网格信息、清单、时间分配和化学形态信息以创建可用于模型的排放。第二，它可以指将所有源类别组合到一个模型文件中。
+	在SMOKE中，合并可以指两个步骤。第一，它可以指的是将单个源类别的SMOKE过程进行合并，例如合并网格信息、清单、时间分配和化学形态信息以创建可用于模型的排放。第二，它可以指将所有源类别组合到一个模型文件中。
 
 - Meteorology data（气象数据）
 
-SMOKE对于生物源、某些移动源和某些点源处理所需的模拟天气数据。
+	SMOKE对于生物源、某些移动源和某些点源处理所需的模拟天气数据。
 
 <a id=glossary_mobile_source></a>
 
 - Mobile source（移动源）
 
-从最一般的意义上讲，移动源只是一个非固定源，例如道路车辆、建筑车辆或割草机。在SMOKE中，术语“移动源”更具体地是指道路车辆。SMOKE移动源由国家、州和县代码，由包括道路类别代码和车辆类型代码的源类别代码（source category codes，SCC），以及由链接标识代码（可选）来具体定义。对于SMOKE，移动源仅包括道路移动源，不包括非道路移动源（这部分被视为区域源）。
+	从最一般的意义上讲，移动源只是一个非固定源，例如道路车辆、建筑车辆或割草机。在SMOKE中，术语“移动源”更具体地是指道路车辆。SMOKE移动源由国家、州和县代码，由包括道路类别代码和车辆类型代码的源类别代码（source category codes，SCC），以及由链接标识代码（可选）来具体定义。对于SMOKE，移动源仅包括道路移动源，不包括非道路移动源（这部分被视为区域源）。
 
 - Model domain（模型区域）
 
-将在其上运行模型的网格区域。
+	将在其上运行模型的网格区域。
 
 <a id=glossary_model_grid></a>
 
 - Model grid（模型网格）
 
-基于地图投影的二维网格，由起始坐标、每个方向上的网格单元数以及网格单元的物理尺寸定义。
+	基于地图投影的二维网格，由起始坐标、每个方向上的网格单元数以及网格单元的物理尺寸定义。
 
 <a id=glossary_model_layers></a>
 
 - Model layers（模型层）
 
-空气质量模型定义的垂直空间划分，因为大气在垂直方向上具有变化的特征。
+	空气质量模型定义的垂直空间划分，因为大气在垂直方向上具有变化的特征。
 
 <a id=glossary_model_species></a>
 
 - Model species（模型物种）
 
-定义为空气质量模型中空气化学模拟中一种化合物或一组化合物（例如一氧化碳（CO）、一氧化氮（NO）、二氧化氮（NO2）、烷烃（PAR）、粗元素碳（ECC））。模型物质可以是实际的化学化合物、离子或化合物组。空气质量模型通常以完整的化学机制输入来自大量物种的一部分模型物种的排放数据。
+	定义为空气质量模型中空气化学模拟中一种化合物或一组化合物（例如一氧化碳（CO）、一氧化氮（NO）、二氧化氮（NO2）、烷烃（PAR）、粗元素碳（ECC））。模型物质可以是实际的化学化合物、离子或化合物组。空气质量模型通常以完整的化学机制输入来自大量物种的一部分模型物种的排放数据。
 
 ### N
 
 - Nonroad mobile sources（非道路移动源）
 
-请参见[Area source（区域源）](#glossary_area_source)。
+	请参见[Area source（区域源）](#glossary_area_source)。
 
 ### O
 
 - On-road mobile source（道路移动源）
 
-请参见[Mobile source（移动源）](#glossary_mobile_source)。
+	请参见[Mobile source（移动源）](#glossary_mobile_source)。
 
 ### P
 
 - Past year（过去某年）
 
-基准年之前的某一年。
+	基准年之前的某一年。
 
 - Plume rise（烟羽抬升）
 
-由于点源烟气的速度和温度造成废气的上升。
+	由于点源烟气的速度和温度造成废气的上升。
 
 - Plume-in-grid（PinG，网格中烟羽）
 
-对高架源的特殊处理，通过空气质量模型对烟羽抬升进行额外的模拟。网格中烟羽的缩写是PinG或PIG。
+	对高架源的特殊处理，通过空气质量模型对烟羽抬升进行额外的模拟。网格中烟羽的缩写是PinG或PIG。
 
 <a id=glossary_point_source></a>
 
 - Point source（点源）
 
-点源是可以由相对于建模区域空间中的点表示的排放源。在SMOKE中，点源由国家、州和县代码、工厂标识代码、1至5个附加的用户定义属性代码（例如排气筒代码、过程代码和源类别代码（source category code，SCC）来定义。点源应具有其他必需属性，例如排气筒参数。
+	点源是可以由相对于建模区域空间中的点表示的排放源。在SMOKE中，点源由国家、州和县代码、工厂标识代码、1至5个附加的用户定义属性代码（例如排气筒代码、过程代码和源类别代码（source category code，SCC）来定义。点源应具有其他必需属性，例如排气筒参数。
 
 - Polar stereographic（极投影）
 
-一种地图投影。
+	一种地图投影。
 
 - Profile data（配置数据）
 
-用于分解排放数据的因子，如在化学物种或时间分配过程中所做的。
+	用于分解排放数据的因子，如在化学物种或时间分配过程中所做的。
 
 - Projection (grid)（网格投影）
 
-请参见[Map projection](#glossary_map_projection)。
+	请参见[Map projection](#glossary_map_projection)。
 
 - Projection (temporal)（时间投影）
 
-根据基准年数据和其他因素来估算过去或将来某年的排放量。
+	根据基准年数据和其他因素来估算过去或将来某年的排放量。
 
 ### R
 
 - Representative County（代表县）
 
-具有代表性的县用于代表一组县，这些县具有不变的燃料参数集（一年中的燃料分配）、车辆年龄分布、检查/维护（I/M）程序、类似的社区特征（例如城市与农村）和类似的气象条件（例如温度和相对湿度）。在具有代表性的县代表的各个县内，有些变量可能有所不同，包括车辆行驶里程（vehicle miles traveled，VMT）、源类型的车辆数量、行车速度和网格单元温度。通过指定代表县，用户可以通过使用单个县代表一组县来减少MOVES的计算时间。
+	具有代表性的县用于代表一组县，这些县具有不变的燃料参数集（一年中的燃料分配）、车辆年龄分布、检查/维护（I/M）程序、类似的社区特征（例如城市与农村）和类似的气象条件（例如温度和相对湿度）。在具有代表性的县代表的各个县内，有些变量可能有所不同，包括车辆行驶里程（vehicle miles traveled，VMT）、源类型的车辆数量、行车速度和网格单元温度。通过指定代表县，用户可以通过使用单个县代表一组县来减少MOVES的计算时间。
 
 ### S
 
 - Source category（源类别）
 
-用于排放源清单开发和排放建模的排放源的一般分类。SMOKE中的主要源类别是区域源、生物源、移动源和点源。有时需要单独处理的其他源类别是离岸点源、非道路区域源和连续排放监控（Continuous Emissions Monitoring，CEM）源。
+	用于排放源清单开发和排放建模的排放源的一般分类。SMOKE中的主要源类别是区域源、生物源、移动源和点源。有时需要单独处理的其他源类别是离岸点源、非道路区域源和连续排放监控（Continuous Emissions Monitoring，CEM）源。
 
-另请参见[区域源](#glossary_area_source)、[生物源](#glossary_biogenic_source)、[移动源](#glossary_mobile_source)、[点源](#glossary_point_source)。
+	另请参见[区域源](#glossary_area_source)、[生物源](#glossary_biogenic_source)、[移动源](#glossary_mobile_source)、[点源](#glossary_point_source)。
 
 - Source classification code（SCC，源分类代码）
 
-排放清单中使用的代码，用于将排放源标记为特定的工业、化学或自然排放过程的一部分。
+	排放清单中使用的代码，用于将排放源标记为特定的工业、化学或自然排放过程的一部分。
 
 - Sparse Matrix Operator Kernel Emissions（SMOKE，稀疏矩阵运算符内核排放）
 
-排放数据建模系统，用于准备排放数据以用于空气质量模型。它将区域源、生物源、移动源和点源清单的分辨率转换为空气质量模型所需的每小时、网格化、模拟物种的分辨率。
+	排放数据建模系统，用于准备排放数据以用于空气质量模型。它将区域源、生物源、移动源和点源清单的分辨率转换为空气质量模型所需的每小时、网格化、模拟物种的分辨率。
 
 <a id=glossary_spatial_allocation></a>
 
 - Spatial allocation（空间分配）
 
-将源空间范围转换为空气质量模型所需的网格单元分辨率。对于区域源，此过程需要网格替代数据。对于移动链路源（线源），这需要确定与链路相交的小区以及每个小区中链路的比例。对于点源，这需要确定点源位于哪个单元中。
+	将源空间范围转换为空气质量模型所需的网格单元分辨率。对于区域源，此过程需要网格替代数据。对于移动链路源（线源），这需要确定与链路相交的小区以及每个小区中链路的比例。对于点源，这需要确定点源位于哪个单元中。
 
 - Spatial surrogate（空间替代）
 
-请参见[Gridding surrogate（网格替代）](#glossary_gridding_surrogate)。
+	请参见[Gridding surrogate（网格替代）](#glossary_gridding_surrogate)。
 
 - Speciation（物种组成）
 
-请参见[Chemical speciation（化学物种组成）](#glossary_chemical_speciation)。
+	请参见[Chemical speciation（化学物种组成）](#glossary_chemical_speciation)。
 
 - Species（物种）
 
-请参见[Model species（模型物种）](#glossary_model_species)。
+	请参见[Model species（模型物种）](#glossary_model_species)。
 
 - Stack parameters（排气筒参数）
 
-点源的属性，包括烟囱高度、烟囱出口直径​​、烟气出口温度、烟气出口速度、烟气流量。
+	点源的属性，包括烟囱高度、烟囱出口直径​​、烟气出口温度、烟气出口速度、烟气流量。
 
 ### T
 
 - Temporal allocation（时间分配）
 
-将清单时间分辨率转换为空气质量模型所需的每小时时间分辨率。
+	将清单时间分辨率转换为空气质量模型所需的每小时时间分辨率。
 
 - Time zone（时区）
 
-地球上的一个区域分配的相对于格林威治标准时间的特定区域，定义为时区0。
+	地球上的一个区域分配的相对于格林威治标准时间的特定区域，定义为时区0。
 
 ### U
 
@@ -292,14 +292,14 @@ SMOKE对于生物源、某些移动源和某些点源处理所需的模拟天气
 
 - Universal Transverse Mercator（UTM，通用横轴墨卡托投影）
 
-基于墨卡托横向投影的军事网格投影，应用于从赤道延伸到北纬84度，南纬80度的地球表面地图。
+	基于墨卡托横向投影的军事网格投影，应用于从赤道延伸到北纬84度，南纬80度的地球表面地图。
 
 - UNIX
-一组符合POSIX标准的操作系统。常用的系统包括Linux、SGI IRIX、Solaris（SunOS）和Mac OSX。
+	一组符合POSIX标准的操作系统。常用的系统包括Linux、SGI IRIX、Solaris（SunOS）和Mac OSX。
 
 - UTM zone（UTM时区）
 
-请参见[Universal Transverse Mercator（UTM，通用横轴墨卡托投影）](#glossary_universal_transverse_mercator)。
+	请参见[Universal Transverse Mercator（UTM，通用横轴墨卡托投影）](#glossary_universal_transverse_mercator)。
 
 ------------------------------------------------------------------------
 
