--- a/zh-CN/documentation/ch12.md
+++ b/zh-CN/documentation/ch12.md
@@ -1,329 +1,104 @@
-::: {.navheader}
-Chapter 12. Downloading, Installing, and Compiling SMOKE
-:::
+# 12 下载、安装、编译SMOKE
 
-[Prev](ch11s02s04.html) 
+## 12.1 简介
 
- 
+本章介绍了有关如何下载和安装SMOKE的说明，以及如何为CMAS支持的平台以外的UNIX平台编译SMOKE。SMOKE编译脚本被配置为使用Linux C-shell环境，不适用于Windows或Mac操作系统。CMAS不支持在Linux以外的其他操作系统上使用SMOKE。如果您的操作系统是CMAS支持的类型之一，则只需从[CMAS模型信息交换所]( http://www.cmascenter.org/html/models.html )下载SMOKE可执行文件。
 
- [Next](ch12s02.html)
+**重要：**大多数SMOKE应用程序将使用预编译的Linux二进制文件。您只需编译SMOKE即可开发新功能、调试源代码或将软件移植到Linux以外的其他操作系统。
 
-------------------------------------------------------------------------
+## 12.2 下载SMOKE
 
-::: {.chapter lang="en"}
-::: {.titlepage}
-<div>
+下载SMOKE的步骤：
 
-<div>
+1. 转到[CMAS模型信息交换所]( http://www.cmascenter.org/html/models.html )。
 
-[]{#ch_installation}Chapter 12. Downloading, Installing, and Compiling SMOKE {#chapter-12.-downloading-installing-and-compiling-smoke .title}
-----------------------------------------------------------------------------
+2. 单击CMAS支持的产品列表中的SMOKE链接。
 
-</div>
+3. 如果您已经在CMAS中注册，请输入您的电子邮件地址和密码。否则，请单击“立即注册”链接并填写注册表格。
 
-</div>
-:::
+4. 您将进入CMAS下载中心。选择SMOKE作为您要下载的产品，然后选择计算机和编译器类型。
 
-::: {.toc}
-[[12.1. Introduction](ch12.html#d0e58202)]{.section}
+5. 下载安装脚本`smoke_install.csh`，源代码脚本和可执行文件的压缩包（`smoke_${version}.Linux2_x86_64pg.tar.gz`），以及测试案例数据文件（`smoke_${version}.nctox.MOVES.data.tar.gz`）。并将这些文件保存在计算机上的同一目录中。
 
-[[12.2. Downloading SMOKE](ch12s02.html)]{.section}
+<a id=12.3></a>
 
-[[12.3. Installing SMOKE](ch12s03.html)]{.section}
+## 12.3 安装SMOKE
 
-[[12.4. Compiling SMOKE for UNIX](ch12s04.html)]{.section}
-:::
+安装SMOKE的步骤：
 
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
+1. 确保从CMAS网站下载的三个文件位于同一目录中。
 
-<div>
+2. 选择要在其中安装SMOKE和数据文件的目录，该目录称为`SMK_HOME` 。
 
-[]{#d0e58202}12.1. Introduction {#introduction .title style="clear: both"}
--------------------------------
+3. 在命令行中输入：
 
-</div>
+```
+setenv SMK_HOME <您选择的SMOKE安装目录>
+```
+	**注意：**SMOKE脚本需要在UNIX C-shell（**csh**或**tcsh**）下运行,该脚本无法与其他shell（例如**bash**）一起使用。
 
-</div>
-:::
+4. 通过在命令行上键入以下命令，确保您的`SMK_HOME`目录存在：
 
-Instructions on how to download and install SMOKE are provided in
-[Section 12.2, "Downloading
-SMOKE"](ch12s02.html "12.2. Downloading SMOKE") and [Section 12.3,
-"Installing SMOKE"](ch12s03.html "12.3. Installing SMOKE").
-[Section 12.4, "Compiling SMOKE for
-UNIX"](ch12s04.html "12.4. Compiling SMOKE for UNIX") describes how to
-compile SMOKE for UNIX platforms other than those supported by CMAS. The
-SMOKE compile scripts are configured to use a Linux C-shell environment,
-and are not designed for Windows or Mac operating systems. Using SMOKE
-on operating systems other than Linux is not supported by CMAS. If your
-operating system is one of the types supported by CMAS, you need only to
-download the SMOKE executables available from the [CMAS Model
-Clearinghouse](http://www.cmascenter.org/html/models.html).
+```
+mkdir -p $SMK_HOME
+```
 
-**IMPORTANT**: Most SMOKE applications will use the pre-compiled Linux
-binaries. You only need to compile SMOKE for developing new
-functionality, debugging the source code, or porting the software to
-operating systems other than Linux.
-:::
-:::
+5. 保存SMOKE安装文件后，转到您选择的SMOKE安装目录。
 
-::: {.navfooter}
+6. 在命令行中键入以下内容：
 
-------------------------------------------------------------------------
+```
+source smoke_install.csh
+```
 
-  -------------------------- -------------------- --------------------------
-  [Prev](ch11s02s04.html)                               [Next](ch12s02.html)
-  11.2.4. SMOKE               [Home](index.html)     12.2. Downloading SMOKE
-  -------------------------- -------------------- --------------------------
-:::
-::: {.navheader}
-12.2. Downloading SMOKE
-:::
+	此命令将解压缩SMOKE文件并将其安装在您的`SMK_HOME`目录中。如果脚本遇到任何问题，它将打印一条错误消息以指出问题所在。
 
-[Prev](ch12.html) 
+SMOKE脚本需要`SMK_HOME`设置。因此，最好在登录计算机时始终定义此设置。为此，请继续执行以下附加步骤：
 
-Chapter 12. Downloading, Installing, and Compiling SMOKE
+7. 转到主目录，然后使用文本编辑器查看`.cshrc`文件（请注意，该文件是隐藏文件，可以在UNIX中使用**ls -a**列出）。
 
- [Next](ch12s03.html)
+8. 在`.cshrc`文件中，添加以下行：
 
-------------------------------------------------------------------------
+```
+setenv SMK_HOME <您选择的SMOKE安装目录>
+```
 
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
+9. 保存并关闭`.cshrc`文件。现在，当您登录计算机或打开新的**xterm**窗口时，将自动定义您的`SMK_HOME`目录。
 
-<div>
+现在，您可以运行SMOKE nctox案例了。在[第4章，如何使用SMOKE](ch04.md)中描述了运行SMOKE的方法和如何使用SMOKE脚本。有关运行nctox案例的示例脚本的说明，请参考[第4.3节，运行SMOKE测试案例](ch04.md#4.3)。当前的SMOKE文档可在<http://www.smoke-model.org>获得。
 
-[]{#sect_install_download}12.2. Downloading SMOKE {#downloading-smoke .title style="clear: both"}
--------------------------------------------------
+## 12.4 为UNIX编译SMOKE
 
-</div>
+除非您打算修改SMOKE源代码，否则请勿尝试编译这些代码，而是使用CMAS中心提供的预编译的二进制Linux可执行文件。但如果预编译的可执行文件与您的操作系统平台不兼容，则需要重新编译SMOKE。SMOKE编译脚本被配置为使用Linux C-shell环境，并且不适用于Windows或Mac操作系统。CMAS不支持在Linux以外的其他操作系统上使用SMOKE。以下步骤将帮助您进行编译SMOKE的设置。
 
-</div>
-:::
+- 如[第12.3节](#12.3)所述安装SMOKE。
 
-Steps for downloading SMOKE:
+- 从[I/O API主页]( https://www.cmascenter.org/ioapi/ )下载并编译I/O API库。I/O API可以安装在`$SMK_HOME/subsys/ioapi`中。
 
-::: {.orderedlist}
-1.  Go to the [CMAS Model
-    Clearinghouse](http://www.cmascenter.org/html/models.html).
+	1. 创建I/O API源代码目录（ioapi）到`$SMK_HOME/subsys/ioapi/ioapi/`目录的符号链接。
 
-2.  Click on the SMOKE link in the list of CMAS-supported products.
+	2. 创建I/O API`libioapi.a`库文件和实用程序（datshift、jul2greg、greg2jul等）到`$SMK_HOME/subsys/ioapi/Linux2_x86_64ifort/`目录的符号链接。
 
-3.  If you have already registered with CMAS, enter your email address
-    and password. Otherwise, click the \"Register now\" link and
-    complete the registration form.
+- 在安装了适当的库和编译选项之后，您可以运行一个Assigns文件，以确保正确配置您的系统。
 
-4.  You will be sent to the CMAS Download Center. Select SMOKE as the
-    product you wish to download and select your computer and compiler
-    type.
+```
+cd $SMK_HOME/subsys/smoke/assigns
 
-5.  Download the installation script (`smoke_install.csh`{.filename}),
-    the source code, scripts, and executables archive
-    (`smoke_${version}.Linux2_x86_64pg.tar.gz`{.filename}), and the test
-    case data files
-    (`smoke_${version}.nctox.MOVES.data.tar.gz`{.filename}). Save these
-    files in the same directory on your machine.
-:::
-:::
+source ASSIGNS.nctox.cmaq.cb05_soa.us12-nc
+```
 
-::: {.navfooter}
+- 现在您应该准备编译SMOKE程序。将目录更改为`$SMKOOT/src/`。
+
+- 在UNIX提示符下，键入：
+
+```
+make
+```
+
+- 运行`Make all`脚本后，应进入`$SMK_BIN`目录以检查是否生成可执行文件。
+
+- 编译完SMOKE程序后，您可以按照[第4.3节，运行SMOKE测试案例](ch04.md#4.3)中的说明运行SMOKE测试案例脚本。
 
 ------------------------------------------------------------------------
 
-  ----------------------------------------------------------- -------------------- -------------------------
-  [Prev](ch12.html)                                             [Up](ch12.html)         [Next](ch12s03.html)
-  Chapter 12. Downloading, Installing, and Compiling SMOKE     [Home](index.html)     12.3. Installing SMOKE
-  ----------------------------------------------------------- -------------------- -------------------------
-:::
-::: {.navheader}
-12.3. Installing SMOKE
-:::
-
-[Prev](ch12s02.html) 
-
-Chapter 12. Downloading, Installing, and Compiling SMOKE
-
- [Next](ch12s04.html)
-
-------------------------------------------------------------------------
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-[]{#sect_install_install}12.3. Installing SMOKE {#installing-smoke .title style="clear: both"}
------------------------------------------------
-
-</div>
-
-</div>
-:::
-
-Steps for installing SMOKE:
-
-::: {.orderedlist}
-1.  Make sure that the three files you downloaded from the CMAS website
-    are in the same directory.
-
-2.  Choose the directory where you want to install SMOKE and the data
-    files. This directory will be known as your `SMK_HOME`{.filename}
-    directory.
-
-3.  At the command line, type:
-
-    **`setenv SMK_HOME`
-    *`<your selected directory for SMOKE installation>`***
-
-    [**NOTE:**]{.bold} the SMOKE scripts are designed to run under the
-    UNIX C-shell (either **csh** or **tcsh**); the scripts will not work
-    with other shells such as **bash**.
-
-4.  Make sure your `SMK_HOME`{.filename} directory exists by typing the
-    following command on the command line:
-
-    **`mkdir -p $SMK_HOME`**
-
-5.  Go to the directory when you have saved the SMOKE installation
-    files.
-
-6.  Type the following at the command line:
-
-    **`source smoke_install.csh`**
-
-    This command will unzip and install the SMOKE files in your
-    `SMK_HOME`{.filename} directory. If the script encounters any
-    problems, it will print an error message to point you to the
-    problem.
-:::
-
-The `SMK_HOME`{.envar} setting is needed by the SMOKE scripts.
-Therefore, it is best to always have this setting defined when you log
-into your computer. To do this, perform the following additional steps
-before proceeding:
-
-::: {.orderedlist}
-7.  Go to your home directory, then use a text editor to view the
-    `.cshrc`{.filename} file (note that this file is a hidden file,
-    which can be listed in UNIX using the **ls -a** command at the
-    prompt).
-
-8.  In the `.cshrc`{.filename} file, add the following line:
-
-    **`setenv SMK_HOME`
-    *`<your selected directory for SMOKE installation>`***
-
-9.  Save and close the `.cshrc`{.filename} file. Your
-    `SMK_HOME`{.filename} directory will now be defined automatically
-    when you log into the computer or when you open a new **xterm**
-    window.
-:::
-
-Now you are ready to run the SMOKE nctox case. Running SMOKE is
-described in [Chapter 4, *How to Use
-SMOKE*](ch04.html "Chapter 4. How to Use SMOKE"), which discusses using
-the SMOKE scripts. Please refer to [Section 4.3, "Running the SMOKE test
-case"](ch04s03.html "4.3. Running the SMOKE test case") for instructions
-on running the example scripts for the nctox case. The current SMOKE
-documentation can be found online at <http://www.smoke-model.org>.
-:::
-
-::: {.navfooter}
-
-------------------------------------------------------------------------
-
-  -------------------------- -------------------- ---------------------------------
-  [Prev](ch12s02.html)         [Up](ch12.html)                 [Next](ch12s04.html)
-  12.2. Downloading SMOKE     [Home](index.html)     12.4. Compiling SMOKE for UNIX
-  -------------------------- -------------------- ---------------------------------
-:::
-::: {.navheader}
-12.4. Compiling SMOKE for UNIX
-:::
-
-[Prev](ch12s03.html) 
-
-Chapter 12. Downloading, Installing, and Compiling SMOKE
-
- [Next](go01.html)
-
-------------------------------------------------------------------------
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-[]{#sect_install_compile}12.4. Compiling SMOKE for UNIX {#compiling-smoke-for-unix .title style="clear: both"}
--------------------------------------------------------
-
-</div>
-
-</div>
-:::
-
-Unless you are planning to modify the SMOKE source codes, DO NOT try to
-compile the codes; use the precompiled binary Linux executables provided
-by the CMAS Center. Also, if the precompiled executables are not
-compatible with your OS platform, you will need to compile SMOKE for
-your system. The SMOKE compile scripts are configured to use a Linux
-C-shell environment, and are not designed for Windows or Mac operating
-systems. Using SMOKE on operating systems other than Linux is not
-supported by CMAS. The following steps will help get you set up to
-compile SMOKE.
-
-::: {.itemizedlist}
--   Install SMOKE as described in [Section 12.3, "Installing
-    SMOKE"](ch12s03.html "12.3. Installing SMOKE").
-
--   Download and compile the I/O API library from the [I/O API home
-    page](https://www.cmascenter.org/ioapi/). The I/O API can be
-    installed in `$SMK_HOME`{.filename}/subsys/ioapi
-
-    \[1\] Create symbolic link to the IOAPI source code directory
-    (ioapi) to the `$SMK_HOME`{.filename}/subsys/ioapi/ioapi/ directory.
-
-    \[2\] Create symbolic link to the IOAPI `libioapi.a`{.filename}
-    library file and utility programs
-    (`datshift, jul2greg, greg2jul and so on`{.filename}) to the
-    `$SMK_HOME`{.filename}/subsys/ioapi/Linux2\_x86\_64ifort/ directory.
-
--   After the appropriate libraries and compile options have been
-    installed, you can source an Assigns file to ensure that your system
-    is configured properly.
-
-    **`cd $SMK_HOME`/subsys/smoke/assigns**
-
-    **`source ASSIGNS.nctox.cmaq.cb05_soa.us12-nc`**
-
--   You should now be ready to compile the SMOKE programs. Change
-    directories to `$SMKOOT`{.filename}/src/.
-
--   At the UNIX prompt, type:
-
-    **`make`**
-
--   After running the `Makeall`{.filename} script, you should check the
-    `$SMK_BIN`{.envar} directory to check the executables.
-
--   Once you have compiled the SMOKE programs, you can run the SMOKE
-    example scripts following the instructions in [Section 4.3, "Running
-    the SMOKE test
-    case"](ch04s03.html "4.3. Running the SMOKE test case").
-:::
-:::
-
-::: {.navfooter}
-
-------------------------------------------------------------------------
-
-  ------------------------- -------------------- -----------------------
-  [Prev](ch12s03.html)        [Up](ch12.html)          [Next](go01.html)
-  12.3. Installing SMOKE     [Home](index.html)     Appendix A. Glossary
-  ------------------------- -------------------- -----------------------
-:::
+[前一章](ch11.md)<<<<<[返回](README.md)>>>>>[下一章](go01.md)
