--- a/zh-CN/documentation/ch12.md
+++ b/zh-CN/documentation/ch12.md
@@ -2,15 +2,15 @@
 
 ## 12.1 简介
 
-本章介绍了有关如何下载和安装SMOKE的说明，以及如何为CMAS支持的平台以外的UNIX平台编译SMOKE。SMOKE编译脚本被配置为使用Linux C-shell环境，不适用于Windows或Mac操作系统。CMAS不支持在Linux以外的其他操作系统上使用SMOKE。如果您的操作系统是CMAS支持的类型之一，则只需从[CMAS模型信息交换所]( http://www.cmascenter.org/html/models.html )下载SMOKE可执行文件。
+本章介绍了有关如何下载和安装SMOKE的说明，以及如何为CMAS支持的平台以外的UNIX平台编译SMOKE。SMOKE编译脚本被配置为使用Linux C-shell环境，不适用于Windows或Mac操作系统。CMAS不支持在Linux以外的其他操作系统上使用SMOKE。如果您的操作系统是CMAS支持的类型之一，则只需从[CMAS模型信息交换所]( https://www.cmascenter.org/smoke/ )下载SMOKE可执行文件。
 
-**重要：**大多数SMOKE应用程序将使用预编译的Linux二进制文件。您只需编译SMOKE即可开发新功能、调试源代码或将软件移植到Linux以外的其他操作系统。
+**重要：** 大多数SMOKE应用程序将使用预编译的Linux二进制文件。您只需编译SMOKE即可开发新功能、调试源代码或将软件移植到Linux以外的其他操作系统。
 
 ## 12.2 下载SMOKE
 
 下载SMOKE的步骤：
 
-1. 转到[CMAS模型信息交换所]( http://www.cmascenter.org/html/models.html )。
+1. 转到[CMAS模型信息交换所]( https://www.cmascenter.org/smoke/ )。
 
 2. 单击CMAS支持的产品列表中的SMOKE链接。
 
@@ -18,7 +18,7 @@
 
 4. 您将进入CMAS下载中心。选择SMOKE作为您要下载的产品，然后选择计算机和编译器类型。
 
-5. 下载安装脚本`smoke_install.csh`，源代码脚本和可执行文件的压缩包（`smoke_${version}.Linux2_x86_64pg.tar.gz`），以及测试案例数据文件（`smoke_${version}.nctox.MOVES.data.tar.gz`）。并将这些文件保存在计算机上的同一目录中。
+5. 下载安装脚本`smoke_install.csh`，源代码脚本和可执行文件的压缩包`smoke_${version}.Linux2_x86_64pg.tar.gz`，以及测试案例数据文件`smoke_${version}.nctox.MOVES.data.tar.gz`。并将这些文件保存在计算机上的同一目录中。
 
 <a id=12.3></a>
 
@@ -35,7 +35,8 @@
 ```
 setenv SMK_HOME <您选择的SMOKE安装目录>
 ```
-	**注意：**SMOKE脚本需要在UNIX C-shell（**csh**或**tcsh**）下运行,该脚本无法与其他shell（例如**bash**）一起使用。
+
+	**注意：** SMOKE脚本需要在UNIX C-shell（**csh**或**tcsh**）下运行,该脚本无法与其他shell（例如**bash**）一起使用。
 
 4. 通过在命令行上键入以下命令，确保您的`SMK_HOME`目录存在：
 
@@ -51,7 +52,7 @@ mkdir -p $SMK_HOME
 source smoke_install.csh
 ```
 
-	此命令将解压缩SMOKE文件并将其安装在您的`SMK_HOME`目录中。如果脚本遇到任何问题，它将打印一条错误消息以指出问题所在。
+此命令将解压缩SMOKE文件并将其安装在您的`SMK_HOME`目录中。如果脚本遇到任何问题，它将打印一条错误消息以指出问题所在。
 
 SMOKE脚本需要`SMK_HOME`设置。因此，最好在登录计算机时始终定义此设置。为此，请继续执行以下附加步骤：
 
@@ -65,7 +66,7 @@ setenv SMK_HOME <您选择的SMOKE安装目录>
 
 9. 保存并关闭`.cshrc`文件。现在，当您登录计算机或打开新的**xterm**窗口时，将自动定义您的`SMK_HOME`目录。
 
-现在，您可以运行SMOKE nctox案例了。在[第4章，如何使用SMOKE](ch04.md)中描述了运行SMOKE的方法和如何使用SMOKE脚本。有关运行nctox案例的示例脚本的说明，请参考[第4.3节，运行SMOKE测试案例](ch04.md#4.3)。当前的SMOKE文档可在<http://www.smoke-model.org>获得。
+现在，您可以运行SMOKE nctox案例了。在[第4章，如何使用SMOKE](ch04.md)中描述了运行SMOKE的方法和如何使用SMOKE脚本。有关运行nctox案例的示例脚本的说明，请参考[第4.3节，运行SMOKE测试案例](ch04.md#4.3)。当前的SMOKE文档可在<https://www.cmascenter.org/smoke/>获得。
 
 ## 12.4 为UNIX编译SMOKE
 
